--- a/milestone2.ipynb
+++ b/milestone2.ipynb
@@ -100,9 +100,9 @@
     "\n",
     "#### Part 4: Evaluation (Forward) Trace\n",
     "\n",
-    "_Definition_: Suppose x = $ \\begin{bmatrix} {x_1} \\\\ \\vdots \\\\ {x_m} \\end{bmatrix} $, we defined $ v_{k - m} = x_k $ for $ k = 1, 2, ..., m $ in the evaluation trace.\n",
+    "Definition: Suppose x = $ \\begin{bmatrix} {x_1} \\\\ \\vdots \\\\ {x_m} \\end{bmatrix} $, we defined $ v_{k - m} = x_k $ for $ k = 1, 2, ..., m $ in the evaluation trace.\n",
     "\n",
-    "_Motivation_: The evaluation trace introduces intermediate results $ v_{k-m} $ of elementary operations to track the differentiation.\n",
+    "Motivation: The evaluation trace introduces intermediate results $ v_{k-m} $ of elementary operations to track the differentiation.\n",
     "\n",
     "Consider the function $ f(x):\\mathbb{R}^2 \\to \\mathbb{R} $:\n",
     "\n",
